<resources>
    <string name="app_name">GroupWith</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="openDrawer">open_drawer</string>
    <string name="closeDrawer">close_drawer</string>
    <string name="nav_home">Home</string>
    <string name="nav_notifications">Notifications</string>
    <string name="nav_chats">Chats</string>
    <string name="nav_my_groups">My Groups</string>
    <string name="nav_settings">Settings</string>
    <string name="nav_about_us">About Us</string>
    <string name="nav_terms_of_service">Terms of Service</string>
    <string-array name="nav_item_activity_titles">
        <item>Home</item>
        <item>Notifications</item>
        <item>My Groups</item>
        <item>Settings</item>
        <item>Create Group</item>
        <item>Group Info</item>
        <item>Report</item>
        <item>Group Members</item>
    </string-array>
    <string name="activity_title_about_us">About Us</string>
    <string name="activity_title_privacy_policy">Privacy Policy</string>
    <string name="action_clear_all">Clear All</string>
    <string name="action_logout">Logout</string>
    <string name="action_mark_all_read">Mark All as Read</string>
    <string name="action_submit">Submit</string>
    <string name="action_report">Report</string>
    <string name="action_view_members">View Members</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="action_settings">Settings</string>
    <string name="category_prompt">Choose a category</string>
    <string-array name="category_arrays">
        <item>Adventures</item>
        <item>Books</item>
        <item>Charity</item>
        <item>Cultures</item>
        
        
        <item>Gym</item>
        <item>Language Learning</item>
        
        <item>Programming</item>
        <item>Photography</item>
        <item>Sports</item>
    </string-array>
    <string-array name="group_gender_arrays">
        
        <item>Male</item>
        <item>Female</item>
    </string-array>
    <string-array name="user_gender_arrays">
        <item>Male</item>
        <item>Female</item>
    </string-array>
    <string-array name="group_member_arrays">
        <item>5</item>
        <item>10</item>
    </string-array>
    <string-array name="group_type_arrays">
        <item>Events</item>
        <item>Interests</item>
    </string-array>
    <string-array name="games_type_arrays">
        <item>Competitive</item>
        <item>Events</item>
        <item>Interests</item>
    </string-array>
    <string-array name="group_report_reasons_arrays">
        <item>Hate speech</item>
        <item>Sex and Nudity</item>
        <item>Spam</item>
    </string-array>
    <string-array name="member_report_reasons_arrays">
        <item>Abusive Members</item>
        <item>Hate speech</item>
        <item>Sex and Nudity</item>
        <item>Spam</item>
    </string-array>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_signin">Sign In</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_chats">Chats</string>
    <string name="title_activity_privacy">Privacy Policy</string>
    <string name="title_activity_terms">Terms of Service</string>
    <string name="pref_header_general">General</string>
    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>
    <string name="pref_title_enable_push_notifications">Enable push notifications</string>
    <string name="pref_title_username">Username</string>
    <string name="pref_title_gender">Members</string>
    <string name="pref_title_member_limit">Group size</string>
    <string name="pref_title_miles">Distance (in miles)</string>
    <string name="pref_summary_gender">Choose which gender you want to join your group.</string>
    <string-array name="pref_gender_list">
        
        <item>Male only</item>
        <item>Female only</item>
    </string-array>
    <string-array name="pref_member_limit">
        <item>5</item>
        <item>10</item>
    </string-array>
    <string-array name="pref_miles">
        <item>5</item>
        <item>10</item>
        <item>15</item>
        <item>20</item>
        <item>25</item>
        <item>30</item>
    </string-array>
    <string-array name="pref_gender_values">
        <item>-1</item>
        <item>0</item>
        <item>1</item>
    </string-array>
    <string-array name="pref_member_limit_values">
        <item>-1</item>
        <item>0</item>
    </string-array>
    <string-array name="pref_miles_values">
        <item>-1</item>
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
    </string-array>
    <string name="pref_title_category">Group category</string>
    <string name="pref_summary_category">Choose a group category.</string>
    <string-array name="pref_category_values">
        <item>-1</item>
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
    </string-array>
    <string name="pref_title_type">Group type</string>
    <string name="pref_summary_type">Choose what type of group you want.</string>
    <string-array name="pref_type_values">
        <item>-1</item>
        <item>0</item>
    </string-array>
    <string name="pref_header_data_sync">Data &amp; sync</string>
    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>
    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>
    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>
    <string-array name="multi_select_list_preference_default_value" />
    <string name="pref_title_system_sync_settings">System sync settings</string>
    <string name="pref_header_notifications">Notifications</string>
    <string name="pref_title_new_message_notifications">New message notifications</string>
    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>
    <string name="pref_title_vibrate">Vibrate</string>
    <string name="title_activity_chat_room">ChatRoomActivity</string>
    <string name="title_activity_tabbed_groups">tabbedGroupsActivity</string>
    <string name="title_activity_results">ResultsActivity</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="permission_rationale_location">Access to the location service is required to demonstrate the \'my location\' feature, which shows your current location on the map.</string>
    <string name="location_permission_denied">This sample requires location permission to enable the \'my location\' layer. Please try again and grant access to use the location.\nIf the permission has been permanently denied, it can be enabled from the System Settings &gt; Apps &gt; \'Google Maps API Demos\'.</string>
    <string name="permission_required_toast">Location permission is required for this demo.</string>
    <string name="title_activity_search">Search</string>
    <string name="title_activity_join_requests">JoinRequests</string>
    <string name="option_decline">Decline</string>
</resources>