<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home_black_24dp"
            android:title="@string/nav_home" />
        <!--<item-->
            <!--android:id="@+id/nav_notifications"-->
            <!--android:icon="@drawable/ic_notifications_black_24dp"-->
            <!--android:title="@string/nav_notifications" />-->


    </group>

    <item android:title="">

        <item
            android:id="@+id/nav_chats"
            android:icon="@android:drawable/sym_action_chat"
            android:title="@string/nav_chats" />

        <item
            android:id="@+id/nav_my_groups"
            android:icon="@drawable/icon_user_black"
            android:title="@string/nav_my_groups" />

        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_settings_black_24dp"
            android:title="@string/nav_settings" />
    </item>

</menu>
