<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen  xmlns:android="http://schemas.android.com/apk/res/android">
    <!-- NOTE: EditTextPreference accepts EditText attributes. -->
    <!-- NOTE: EditTextPreference's summary should be set to its value by the activity code. -->
    <!--<EditTextPreference-->
        <!--android:textColor="@android:color/black"-->
        <!--android:capitalize="words"-->
        <!--android:inputType="textCapWords"-->
        <!--android:maxLines="1"-->
        <!--android:selectAllOnFocus="true"-->
        <!--android:singleLine="true"-->
        <!--android:title="Keyword" />-->

    <ListPreference
        android:defaultValue="-1"
        android:entries="@array/pref_gender_list"
        android:entryValues="@array/pref_gender_values"
        android:summary="%s"
        android:key="example_list"
        android:negativeButtonText="@null"
        android:positiveButtonText="@null"
        android:title="@string/pref_title_gender" />

    <ListPreference
        android:defaultValue="-1"
        android:entries="@array/category_arrays"
        android:entryValues="@array/pref_category_values"
        android:summary="%s"
        android:key="example_list2"
        android:negativeButtonText="@null"
        android:positiveButtonText="@null"
        android:title="@string/pref_title_category" />

    <ListPreference
        android:defaultValue="-1"
        android:entries="@array/group_type_arrays"
        android:entryValues="@array/pref_type_values"
        android:summary="%s"
        android:key="example_list3"
        android:negativeButtonText="@null"
        android:positiveButtonText="@null"
        android:title="@string/pref_title_type" />

    <ListPreference
        android:defaultValue="-1"
        android:entries="@array/pref_member_limit"
        android:entryValues="@array/pref_member_limit_values"
        android:summary="%s"
        android:key="example_list4"
        android:negativeButtonText="@null"
        android:positiveButtonText="@null"
        android:title="@string/pref_title_member_limit" />

    <ListPreference
        android:defaultValue="-1"
        android:entries="@array/pref_miles"
        android:entryValues="@array/pref_miles_values"
        android:summary="%s"
        android:key="example_list5"
        android:negativeButtonText="@null"
        android:positiveButtonText="@null"
        android:title="@string/pref_title_miles" />

</PreferenceScreen>